# emptypt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bench_pydantic_v1_versions.sh  bench_pydantic_versions.sh  benchmark_entrypoints.py  pydantic-version-benchmarks.md  pyproject.toml  test_pydantic_speed.py  test_pydantic_v1_speed.py
msgspec_packages/argh_cli/: pyproject.toml
msgspec_packages/argh_ds_cli/: pyproject.toml
msgspec_packages/argh_ds_cli/src/argh_ds_cli/: __init__.py
msgspec_packages/click_cli/: pyproject.toml
msgspec_packages/click_cli/src/click_cli/: main.py
msgspec_packages/defopt_cli/: pyproject.toml
msgspec_packages/simple_cli/: pyproject.toml
msgspec_packages/simple_cli/src/simple_cli/: action.py
msgspec_packages/typer_cli/: pyproject.toml
pydantic_packages/argh_cli/: pyproject.toml
pydantic_packages/argh_ds_cli/src/argh_ds_cli/: interface.py
pydantic_packages/click_cli/: pyproject.toml
pydantic_packages/click_cli/src/click_cli/: __init__.py
pydantic_packages/defopt_cli/src/defopt_cli/: main.py
pydantic_packages/typer_cli/src/typer_cli/: main.py
src/emptypt/: action.py  error_handlers.py
src/emptypt/cli/: argh_cli.py  argh_ds_cli.py  click_cli.py  defopt_cli.py  jumper_config.py  msgspec_cli.py  typer_cli.py
src/emptypt/core/: .minimal_op.py.swp  action.py  error_handlers.py
src/emptypt/interfaces/: __init__.py  action.py  action_ds.py  debug.py  display.py
tests/: clis_test.py  test_clis.py
