[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
    {email = "louismmx@gmail.com", name = "Louis Maddox"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "argh-cli",
    "argh-ds-cli",
    "click-cli",
    "defopt-cli",
    "emptypt",
    "simple-cli",
    "typer-cli",
]
description = "Benchmarking Python package entrypoint latency."
dynamic = ["version"]
keywords = ["CLI", "benchmarking", "entrypoint", "latency"]
license = {text = "MIT"}
name = "emptypt_ws"
readme = "README.md"
requires-python = ">=3.10,<3.12"

[project.urls]
Homepage = "https://github.com/lmmx/emptypt"
Repository = "https://github.com/lmmx/emptypt.git"

[tool.pdm]
version = {path = "version.py", source = "file"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E741"]
select = ["C", "E", "F", "I", "W"]

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true

[tool.uv.sources]
argh-cli = {workspace = true}
argh-ds-cli = {workspace = true}
argh_cli = {workspace = true}
argh_ds_cli = {workspace = true}
click-cli = {workspace = true}
click_cli = {workspace = true}
defopt-cli = {workspace = true}
defopt_cli = {workspace = true}
emptypt = {workspace = true}
simple-cli = {workspace = true}
simple_cli = {workspace = true}
typer-cli = {workspace = true}
typer_cli = {workspace = true}

[tool.uv.workspace]
members = [
    "packages/argh_cli",
    "packages/argh_ds_cli",
    "packages/click_cli",
    "packages/defopt_cli",
    "packages/emptypt",
    "packages/simple_cli",
    "packages/typer_cli",
]
