[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
    {email = "louismmx@gmail.com", name = "Louis Maddox"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "emptypt",
    "tabulate>=0.9.0",
    "argh-msg-cli",
    "argh-ds-msg-cli",
    "click-msg-cli",
    "defopt-msg-cli",
    "simple-msg-cli",
    "argh-ds-pyd-cli",
    "argh-pyd-cli",
    "click-pyd-cli",
    "defopt-pyd-cli",
    "simple-pyd-cli",
]
description = "Benchmarking Python package entrypoint latency."
keywords = ["CLI", "benchmarking", "entrypoint", "latency"]
license = {text = "MIT"}
name = "emptypt_ws"
readme = "README.md"
requires-python = ">=3.10,<3.13"
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/lmmx/emptypt"
Repository = "https://github.com/lmmx/emptypt.git"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E741"]
select = ["C", "E", "F", "I", "W"]

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true

[tool.uv.workspace]
members = [
    "packages/emptypt",
    "packages/msgspec_packages/*",
    "packages/pydantic_packages/*",
]

[tool.uv.sources]
emptypt = { workspace = true }
argh-msg-cli = { workspace = true }
argh-ds-msg-cli = { workspace = true }
click-msg-cli = { workspace = true }
defopt-msg-cli = { workspace = true }
simple-msg-cli = { workspace = true }
argh-ds-cli = { workspace = true }
argh-ds-pyd-cli = { workspace = true }
argh-pyd-cli = { workspace = true }
click-pyd-cli = { workspace = true }
defopt-pyd-cli = { workspace = true }
simple-pyd-cli = { workspace = true }
