[project]
dependencies = [
    "defopt>=6.4.0",
    "msgspec>=0.18.5",
]
description = "Add your description here"
name = "defopt-cli"
readme = "README.md"
requires-python = ">=3.10, <3.12"
version = "0.1.0"

[project.scripts]
emptypt-m-defopt = "defopt_cli.main:run_cli"

[tool.lint.isort]
known_first_party = ["defopt_cli"]

[tool.ruff.lint.isort]
known-first-party = ["defopt_cli"]
