[project]
dependencies = [
    "msgspec>=0.18.5",
]
description = "Add your description here"
name = "simple-cli"
readme = "README.md"
requires-python = ">=3.10, <3.12"
version = "0.1.0"

[project.scripts]
emptypt-minimum = "simple_cli.minimal_op:bar"
emptypt-simple = "simple_cli.action:foo"

[tool.lint.isort]
known_first_party = ["simple_cli"]

[tool.ruff.lint.isort]
known-first-party = ["simple_cli"]
